--- a/notebook/notebook_parte5.ipynb
+++ b/notebook/notebook_parte5.ipynb
@@ -5258,7 +5258,7 @@
     "--------------------------------------------------\n",
     "### Tarefa 23 - Apresente gráficos de linha onde, para cada valor de k (número de agentes) no eixo x, temos no eixo y o tempo necessário para que todos os clientes efetuem suas reservas. Um gráfico diferente deve ser apresentado para cada par de versões da reserva e nível de isolamento.\n",
     "\n",
-    "#Essa tarefa foi realizada em um scripty externo (questão24.py) para termos menos poluição visual no notebook"
+    "Essa tarefa foi realizada em um scripty externo (questão24.py) para termos menos poluição visual no notebook"
    ]
   },
   {
