--- a/notebook/notebook_parte5.ipynb
+++ b/notebook/notebook_parte5.ipynb
@@ -5488,10 +5488,9 @@
     "\n",
     "- Igual à estratégia separada, os tempos foram um pouco maiores do que no READ COMMITTED, por conta dos bloqueios e verificações adicionais necessárias para garantir a consistência no nível SERIALIZABLE.\n",
     "\n",
-    "Comparação Geral\n",
+    "Comparação\n",
     "\n",
     "\n",
-    "Conclusão\n",
     "Para sistemas que priorizam desempenho com consistência suficiente, o nível READ COMMITTED é uma escolha eficiente. Já em aplicações críticas que exigem a mais alta consistência, o nível SERIALIZABLE é melhor, embora com um leve impacto no desempenho. Entretando, Ambas as estratégias (única e separada) funcionaram bem, com a estratégia única se destacando levemente em termos de eficiência.\n"
    ]
   },
